<?xml version="1.0"?>
<package format="2">
    <name>ros2_tutorials</name>
    <version>0.0.1</version>
    <description>
        ros2 tutorials (c++ and python3): talker, listener
    </description>

    <maintainer email="oscar.lima@dfki.de">Oscar Lima</maintainer>

    <license>GPLv3</license>

    <author email="oscar.lima@dfki.de">Oscar Lima</author>

    <buildtool_depend>ament_cmake</buildtool_depend>

    <build_depend>rclcpp</build_depend>
    <build_depend>std_msgs</build_depend>

    <exec_depend>rclcpp</exec_depend>
    <exec_depend>std_msgs</exec_depend>

    <export>
        <build_type>ament_cmake</build_type>
    </export>
</package>
